# todo_app_rust_yew

./: Cargo.toml  README.md
src/: lib.rs
src/components/: footer.rs  header.rs  home.rs  mod.rs
src/components/todo_item/: api.rs  check_todo_item.rs  delete_todo_item.rs  insert_todo_item.rs  mod.rs  todo_item.rs
src/components/todo_list/: api.rs  delete_todo_list.rs  insert_todo_list.rs  mod.rs  todo_list.rs
src/routes/: mod.rs
